--- a/WolvenKit/Views/DocumentView.xaml
+++ b/WolvenKit/Views/DocumentView.xaml
@@ -1,4 +1,4 @@
-﻿<catel:UserControl
+<catel:UserControl
 	x:Class="WolvenKit.Views.DocumentView"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -21,108 +21,93 @@
     <catel:UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <hc:ThemeResources  RequestedTheme="Dark"/>
+                <hc:ThemeResources/>
                 <hc:Theme/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </catel:UserControl.Resources>
+
     <Grid>
         <Grid.Resources>
             <conv:ExtensionToImageConverter x:Key="ExtensionToImageConverter"/>
         </Grid.Resources>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="3*"/>
+        </Grid.ColumnDefinitions>
 
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="5"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-
-        <TreeView Name="TreeView" Style="{DynamicResource TreeView}"
+        <Grid Grid.Column="0">
+            <hc:TabControl IsTabFillEnabled="True" ShowCloseButton="False" IsAnimationEnabled="True">
+                <hc:TabItem Header="CHUNKS">
+                    <TreeView Name="TreeView" Style="{DynamicResource TreeView}"
                   Grid.Row="0"
                              ItemsSource="{Binding Chunks}"
                              
                              >
-            <ei:Interaction.Behaviors>
-                <behavior:TreeViewBehavior/>
-            </ei:Interaction.Behaviors>
+                        <ei:Interaction.Behaviors>
+                            <behavior:TreeViewBehavior/>
+                        </ei:Interaction.Behaviors>
 
-            <TreeView.ContextMenu>
-                <ContextMenu>
-                    
+                        <TreeView.ContextMenu>
+                            <ContextMenu>
 
-                </ContextMenu>
-            </TreeView.ContextMenu>
 
-            <TreeView.ItemContainerStyle>
-                <Style TargetType="{x:Type TreeViewItem}">
-                    <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}"/>
-                    <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}"/>
-                    <Setter Property="KeyboardNavigation.AcceptsReturn" Value="True" />
-                </Style>
-            </TreeView.ItemContainerStyle>
+                            </ContextMenu>
+                        </TreeView.ContextMenu>
 
-            <TreeView.Resources>
-                <HierarchicalDataTemplate DataType="{x:Type cmodel:ChunkViewModel}" 
+                        <TreeView.ItemContainerStyle>
+                            <Style TargetType="{x:Type TreeViewItem}">
+                                <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}"/>
+                                <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}"/>
+                                <Setter Property="KeyboardNavigation.AcceptsReturn" Value="True" />
+                            </Style>
+                        </TreeView.ItemContainerStyle>
+
+                        <TreeView.Resources>
+                            <HierarchicalDataTemplate DataType="{x:Type cmodel:ChunkViewModel}" 
                                           ItemsSource="{Binding Children}">
-                    <StackPanel Orientation="Horizontal">
-                        
-                        <TextBlock Text="{Binding Path=Name}" />
-                        <ei:Interaction.Triggers>
-                            <ei:EventTrigger EventName="PreviewMouseRightButtonDown">
-                                <ei:ChangePropertyAction PropertyName="IsSelected" Value="true" 
+                                <StackPanel Orientation="Horizontal">
+
+                                    <TextBlock Text="{Binding Path=Name}" />
+                                    <ei:Interaction.Triggers>
+                                        <ei:EventTrigger EventName="PreviewMouseRightButtonDown">
+                                            <ei:ChangePropertyAction PropertyName="IsSelected" Value="true" 
                                                          TargetObject="{Binding}"/>
-                            </ei:EventTrigger>
-                        </ei:Interaction.Triggers>
+                                        </ei:EventTrigger>
+                                    </ei:Interaction.Triggers>
 
-                    </StackPanel>
+                                </StackPanel>
 
-                </HierarchicalDataTemplate>
-            </TreeView.Resources>
-        </TreeView>
+                            </HierarchicalDataTemplate>
+                        </TreeView.Resources>
+                    </TreeView>
+                </hc:TabItem>
 
-        <GridSplitter Grid.Row="1" Height="5" HorizontalAlignment="Stretch" />
-        
-        <TreeView Name="TreeViewProp" 
-                  Grid.Row="2"
-                  ItemsSource="{Binding SelectEditableVariables}"
-                  
-        >
+                <hc:TabItem  Header="IMPORTS">
+                    <TreeView>
 
+                    </TreeView>
+                </hc:TabItem>
 
-            <TreeView.ItemContainerStyle>
-                <Style TargetType="{x:Type TreeViewItem}" BasedOn="{StaticResource TreeViewItemBaseStyle}">
-                    <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}"/>
-                    <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}"/>
-                    <Setter Property="KeyboardNavigation.AcceptsReturn" Value="True" />
-                </Style>
-            </TreeView.ItemContainerStyle>
+                <hc:TabItem Header="BUFFERS">
+                    <TreeView>
 
-            <TreeView.Resources>
-                <HierarchicalDataTemplate DataType="{x:Type cmodel:ChunkPropertyViewModel}" 
-                                          ItemsSource="{Binding Children}">
+                    </TreeView>
+                </hc:TabItem>
 
-                    <StackPanel Orientation="Horizontal">
+                <hc:TabItem Header="PREVIEW">
+                    <TreeView>
 
-                        <TextBlock  Text="{Binding Name}" MinWidth="200" 
-                                    Foreground="{Binding Path=ForegroundColor}" />
-                        <GridSplitter Height="5" HorizontalAlignment="Stretch" />
-                        <TextBlock   Text="{Binding Type}"
-                                     Foreground="{Binding Path=ForegroundColor}" 
-                                     MinWidth="200" Padding="10,0,0,0"/>
-                        <GridSplitter  Height="5" HorizontalAlignment="Stretch" />
-                        <TextBlock   Text="{Binding Value}"
-                                     Foreground="{Binding Path=ForegroundColor}"
-                                     MinWidth="200" Padding="10,0,0,0"/>
+                    </TreeView>
+                </hc:TabItem>
+            </hc:TabControl>
+        </Grid>
 
+        <Grid Grid.Column="1">
+            <hc:PropertyGrid SelectedObject="{Binding SelectEditableVariables}">
 
-                    </StackPanel>
-
-                    
-
-                </HierarchicalDataTemplate>
-            </TreeView.Resources>
-        </TreeView>
-
+            </hc:PropertyGrid>
+        </Grid>
     </Grid>
 
 </catel:UserControl>
