--- a/WolvenKit/Views/HomePage/Pages/WelcomePageView.xaml
+++ b/WolvenKit/Views/HomePage/Pages/WelcomePageView.xaml
@@ -1,8 +1,9 @@
-﻿<catel:UserControl x:Class="WolvenKit.Views.HomePage.Pages.WelcomePageView"
+<catel:UserControl x:Class="WolvenKit.Views.HomePage.Pages.WelcomePageView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com"
                    xmlns:hc="https://handyorg.github.io/handycontrol"
+
                    xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks" xmlns:kapow="clr-namespace:WolvenKit.Views.HomePage.Pages"
                    IsVisibleChanged="UserControl_IsVisibleChanged">
     <catel:UserControl.Resources>
@@ -109,14 +110,14 @@
         </ResourceDictionary>
     </catel:UserControl.Resources>
 
-   
-        <Grid hc:ThemeManager.RequestedAccentColor="{DynamicResource MahApps.Brushes.Accent3}"  MinWidth="300" MinHeight="300" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="5,5,2,5">
+
+    <Grid  x:Name="topGrid" hc:ThemeManager.RequestedAccentColor="{DynamicResource MahApps.Brushes.Accent3}"  MinWidth="300" MinHeight="300" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="5,5,2,5">
 
 
         <Grid.RowDefinitions>
             <RowDefinition Height="4*"/>
             <RowDefinition Height="3*"/>
-            <RowDefinition Height="1*"/>
+            <RowDefinition Height="60"/>
 
         </Grid.RowDefinitions>
 
@@ -143,13 +144,14 @@
                     </StackPanel>
                 </StackPanel>
                 <TextBlock Margin="15" TextWrapping="Wrap">
-                    <Run  Text="If this is your first time using Wolvenkit, It is recommended to get yourself started by using our First Use Setup."> </Run>
-                    <LineBreak/> <LineBreak/>
-                    <Run Text="You can find the First Use Setup in the left SideMenu by clicking Get Started."/> 
-                    <LineBreak/>
-                    <Run Text="After setting yourself up you can start creating your own mod by creating a new project!"/>                    
-                    <LineBreak/><LineBreak/><LineBreak/>     
-                    <Run Text="Have fun modding!,"/>
+               
+
+          We would like to thank everyone for their continued support!                    <LineBreak/><LineBreak/>     
+
+                    Without, this project wouldn't be possible
+
+                    <LineBreak/><LineBreak/>     
+                    <Run Text="Have fun modding!"/>
                     <LineBreak/><LineBreak/><LineBreak/>                   
                     <Run Text="The WolvenKit Team."/>
 
@@ -233,8 +235,8 @@
 
                         </StackPanel>
                         <hc:Divider Margin="32,0,32,0"></hc:Divider>
-                    <hc:TransitioningContentControl MinHeight="250" MaxHeight="200" Margin="0,0,0,0">
-                                <hc:CoverView                        ItemsSource="{Binding RecentlyUsedItems}"  ShowContent="False" BorderBrush="{x:Null}"  Grid.RowSpan="1" ItemContentHeight="55" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" Margin="15" BorderThickness="1,1,1,1" ItemMargin="15,8,15,8" ItemHeight="200"  ItemWidth="350">
+                            <hc:TransitioningContentControl MinHeight="280" MaxHeight="280" Margin="0,0,0,0">
+                                <hc:CoverView                        ItemsSource="{Binding FancyProjects}"  ShowContent="False" BorderBrush="{x:Null}"  Grid.RowSpan="1" ItemContentHeight="55" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" Margin="15" BorderThickness="1,1,1,1" ItemMargin="15,8,15,8" ItemHeight="240" ItemWidth="350">
 
                                 <hc:CoverView.ItemHeaderTemplate>
                                     <DataTemplate>
@@ -243,17 +245,15 @@
                                                 <Border Background="{DynamicResource Fluent.Ribbon.Brushes.BackstageTabControl.ItemsPanelBackground}" CornerRadius="15,2,2,2">
                                                     <hc:Tag  Height="40" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Background="{x:Null}"  MinWidth="350" MaxWidth="350" Margin="3" ShowCloseButton="False">
                                                         <hc:Tag.Content>
-                                                            <TextBlock HorizontalAlignment="Left" Margin="0,0,0,0" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" FontSize="16"   Text="{Binding Name}"></TextBlock>
+                                                                <TextBlock HorizontalAlignment="Left" Margin="0,0,0,0" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" FontSize="16"   Text="{Binding Path=Name}"></TextBlock>
                                                         </hc:Tag.Content>
                                                         <hc:Tag.Header>
                                                             <Border>
-                                                                <Border.Effect>
-                                                                    <hc:GrayScaleEffect/>
-                                                                </Border.Effect>
-                                                                <Image Source="{StaticResource  Fluent.Ribbon.Images.DefaultPlaceholder}">
+                                                              
+                                                                <Image Source="{Binding Image}">
                                                                     <Image.Effect>
 
-                                                                        <hc:BrightnessEffect Brightness="0.3"/>
+                                                                        <hc:BrightnessEffect Brightness="0.9"/>
                                                                     </Image.Effect>
                                                                 </Image>
                                                             </Border>
@@ -274,7 +274,7 @@
                                                             <Border VerticalAlignment="Center" Height="25" Background="{DynamicResource Fluent.Ribbon.Brushes.BackstageTabControl.ItemsPanelBackground}" CornerRadius="5,2,2,2">
                                                                     <StackPanel Orientation="Horizontal">
                                                                         <TextBlock Width="74" Margin="5" VerticalAlignment="Center"  Text="Project Type : "/>
-                                                                        <TextBlock Width="280" Margin="5" VerticalAlignment="Center"  Text="NOTHING TO BIND"/>
+                                                                        <TextBlock Width="280" Margin="5" VerticalAlignment="Center"  Text="{Binding Type}"/>
 
                                                                     </StackPanel>
                                                             </Border>
@@ -284,26 +284,40 @@
                                                             <hc:Divider Margin="5,15" LineStroke="{DynamicResource MahApps.Brushes.Accent3}" LineStrokeThickness="2" Width="15"/>
                                                             <Border VerticalAlignment="Center" Height="25" Background="{DynamicResource Fluent.Ribbon.Brushes.BackstageTabControl.ItemsPanelBackground}" CornerRadius="5,2,2,2">
                                                                     <StackPanel Orientation="Horizontal">
-                                                                        <TextBlock Width="80" Margin="5" VerticalAlignment="Center"  Text="Last Modified : "/>
-                                                                        <TextBlock Width="280" Margin="5" VerticalAlignment="Center"  Text="{Binding DateTime}"/>
+                                                                        <TextBlock Width="50" Margin="5" VerticalAlignment="Center"  Text="Created : "/>
+                                                                        <TextBlock Width="280" Margin="5" VerticalAlignment="Center"  Text="{Binding CreationDate}"/>
 
                                                                     </StackPanel>
                                                                 </Border>
                                                         </StackPanel>
 
-                                                    </StackPanel>
+                                                            <StackPanel Margin="5" Orientation="Horizontal">
+                                                                <hc:Divider Margin="5,15" LineStroke="{DynamicResource MahApps.Brushes.Accent3}" LineStrokeThickness="2" Width="15"/>
+                                                                <Border VerticalAlignment="Center" Height="25" Background="{DynamicResource Fluent.Ribbon.Brushes.BackstageTabControl.ItemsPanelBackground}" CornerRadius="5,2,2,2">
+                                                                    <StackPanel Orientation="Horizontal">
+                                                                        <TextBlock Width="30" Margin="5" VerticalAlignment="Center"  Text="Path : "/>
+                                                                        <TextBlock Width="280" Margin="5" VerticalAlignment="Center"  Text="{Binding ProjectPath}"/>
+
+                                                                    </StackPanel>
+                                                                </Border>
+                                                            </StackPanel>
+                                                
+
+                                                        </StackPanel>
 
                                                     <StackPanel HorizontalAlignment="Right" VerticalAlignment="Bottom" Orientation="Horizontal" Margin="15">
-                                                        <Button Height="35"  HorizontalAlignment="Left">
-                                                            <iconPacks:PackIconCodicons Kind="Edit"></iconPacks:PackIconCodicons>
+                                                            <Button Height="35"  HorizontalAlignment="Left"  Command="{catel:CommandManagerBinding Application.OpenProject}"
+                                                     CommandParameter="{Binding ProjectPath}">
+                                                            <iconPacks:PackIconCodicons Kind="Edit" ></iconPacks:PackIconCodicons>
                                                         </Button>
                                                         <hc:Divider LineStrokeThickness="2" LineStroke="{DynamicResource MahApps.Brushes.Accent3}" Orientation="Vertical" MaxHeight="16"/>
-                                                        <Button Height="35"  HorizontalAlignment="Left">
-                                                            <iconPacks:PackIconCodicons Kind="FolderOpened"></iconPacks:PackIconCodicons>
+                                                            <Button    Command="{Binding ElementName=topGrid, Path=DataContext.OpenInExplorer}"
+                                                             CommandParameter="{Binding ProjectPath}"   Height="35"  HorizontalAlignment="Left">
+                                                            <iconPacks:PackIconCodicons Kind="FolderOpened" ></iconPacks:PackIconCodicons>
 
                                                         </Button>
                                                         <hc:Divider LineStrokeThickness="2" LineStroke="{DynamicResource MahApps.Brushes.Accent3}" Orientation="Vertical" MaxHeight="16"/>
-                                                        <Button Height="35"  HorizontalAlignment="Left">
+                                                        <Button IsEnabled="False" Height="35"  HorizontalAlignment="Left">
                                                             <iconPacks:PackIconCodicons Kind="Trash"></iconPacks:PackIconCodicons>
 
                                                         </Button>
@@ -341,7 +355,7 @@
             </hc:UniformSpacingPanel>
             <iconPacks:PackIconCodicons Foreground="{DynamicResource Fluent.Ribbon.Brushes.IdealForegroundDisabledBrush}"  HorizontalAlignment="Right" Margin="0,0,5,0" VerticalAlignment="Bottom" Kind="Versions" Width="20" Height="20"/>
 
-            <TextBlock FontSize="10" Foreground="{DynamicResource Fluent.Ribbon.Brushes.IdealForegroundDisabledBrush}" IsEnabled="False" FlowDirection="LeftToRight" Text="V1.032323230.0" Margin="5,5,30,4" HorizontalAlignment="Right" VerticalAlignment="Bottom"/>
+            <TextBlock FontSize="10" Foreground="{DynamicResource Fluent.Ribbon.Brushes.IdealForegroundDisabledBrush}" IsEnabled="False" FlowDirection="LeftToRight" Text="{Binding VersionWkit}" Margin="5,5,30,4" HorizontalAlignment="Right" VerticalAlignment="Bottom"/>
         </Grid>
 
 
